[project]
name = "pyallffs"
version = "0.1"
authors = [
  { name="Tohid Yousefi", email="tohid.yousefi@hotmail.com" },
  { name="Özlem Varlıklar", email="aktas.ozlem@deu.edu.tr" }
]
maintainers = [
  { name="Özlem Varlıklar", email="aktas.ozlem@deu.edu.tr" },
]
description = "All Filter Feature Selection Methods"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/tohid-yousefi/pyallffs"
Website = "https://tohid.com.tr"
